--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -7,7 +7,7 @@ on:
       - master
       
   schedule:
-  - cron: "0 7,8,9,10,11 * * *"
+  - cron: "1 * * * *"
 
 jobs:
   auto_commit:
@@ -25,8 +25,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "mazipanneh@gmail.com"
-          git config --local user.name "mazipan"
+          git config --local user.email "neolinedev@gmail.com"
+          git config --local user.name "mrsaddam32"
           git add -A
           
           arr[0]="feat: 😂 auto commit"
